--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.servlet.session.persistent=false
 # registration service
 #registration.url = http://localhost:8080
 registration.service = MQ
+gradebook.service = MQ
 spring.rabbitmq.addresses=${CLOUDAMQP_URL}
 
 # database properties
