--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- end selenium -->
+		<!-- For Oath2 -->
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
 		
 	</dependencies>
 
