--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,23 @@ server.servlet.session.persistent=false
 
 # registration service
 #registration.url = http://localhost:8080
-registration.service = MQ
-gradebook.service = MQ
-spring.rabbitmq.addresses=${CLOUDAMQP_URL}
+registration.service = default
+gradebook.service = default
+#spring.rabbitmq.addresses=${CLOUDAMQP_URL}
+
+# URL for redirect back to React after successful login
+frontend.post.login.url = http://localhost:3000/semester
+
+# google authentication provider
+spring.security.oauth2.client.registration.google.client-id = 249607574871-4pjem7vngdoqr58r6v083ds703egcgvj.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret = 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
 
 # database properties
-# spring.datasource.url=jdbc:mysql://localhost:3306/gradebook
-# spring.datasource.username=root
-# spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.url=jdbc:mysql://localhost:3306/gradebook
+spring.datasource.username=root
+spring.datasource.password=
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.hikari.maximum-pool-size=5
 
 # logging.level.org.springframework.security = TRACE
 #debug = true
