--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 # JAWSDB database properties for register back end
-spring.datasource.url = jdbc:mysql://phtfaw4p6a970uc0.cbetxkdyhwsb.us-east-1.rds.amazonaws.com/y01wm3hoddy51xrm
-spring.datasource.username = j9ys9nujpiexjlp4
-spring.datasource.password = op3yksmgsfae67hu
-gradebook.service = default
-registration.service= default
+#spring.datasource.url = jdbc:mysql://phtfaw4p6a970uc0.cbetxkdyhwsb.us-east-1.rds.amazonaws.com/y01wm3hoddy51xrm
+#spring.datasource.username = j9ys9nujpiexjlp4
+#spring.datasource.password = op3yksmgsfae67hu
+#gradebook.service = default
+#registration.service= default
